# autostruct-rs

./: .gitignore  Cargo.toml  README.md
autostruct/: Cargo.toml
autostruct/src/: autoenum.rs  autostruct.rs  find_item.rs  lib.rs  main.rs  util.rs
